@@ -2,12 +2,8 @@ package com.epam.esm.service.impl;
 
 import com.epam.esm.config.Translator;
 import com.epam.esm.entity.Tag;
-import com.epam.esm.repository.BaseCrudRepository;
-import com.epam.esm.specification.impl.tag.TagFindAllSpecification;
-import com.epam.esm.specification.impl.tag.TagFindByCertificateIdSpecification;
-import com.epam.esm.specification.impl.tag.TagFindByIdSpecification;
-import com.epam.esm.specification.impl.tag.TagFindByNameSpecification;
-import com.epam.esm.specification.impl.tag.TagFindByNamesSpecification;
+import com.epam.esm.exception.NoSuchEntityException;
+import com.epam.esm.repository.impl.TagRepositoryImpl;
 import com.epam.esm.validator.TagValidator;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -16,12 +12,16 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -30,7 +30,7 @@ import static org.mockito.Mockito.when;
 class TagServiceImplTest {
 
     @Mock
-    private BaseCrudRepository<Tag> tagRepository;
+    private TagRepositoryImpl tagRepository;
     @Mock
     private TagValidator tagValidator;
     @Mock
@@ -41,22 +41,24 @@ class TagServiceImplTest {
     @Test
     void testShouldAddTag() {
         //given
-        Tag tag = new Tag("tag");
-        when(tagRepository.add(tag)).thenReturn(new Tag(1L, "tag"));
+        Tag tag = new Tag(1L, "tag");
+        Tag addTag = new Tag("name");
+        when(tagRepository.add(addTag)).thenReturn(tag);
         //when
-        Tag actual = tagService.add(tag);
+        Tag actual = tagService.add(addTag);
         //then
         assertEquals(tag.getName(), actual.getName());
+        assertEquals(1L, actual.getId());
         assertNotNull(actual.getId());
     }
 
     @Test
     void testShouldReturnAllTags() {
         //given
-        List<Tag> tags = Arrays.asList(new Tag(1L, "tag"), new Tag());
-        when(tagRepository.queryForList(any(TagFindAllSpecification.class))).thenReturn(tags);
+        List<Tag> tags = Arrays.asList(new Tag(1L, "tag"), new Tag(2L, "tag2"));
+        when(tagRepository.findAll(1, 10)).thenReturn(tags);
         //when
-        List<Tag> actual = tagService.findAll();
+        List<Tag> actual = tagService.findAll(10, 1);
         //then
         assertEquals(tags.size(), actual.size());
         assertEquals(tags, actual);
@@ -66,7 +68,7 @@ class TagServiceImplTest {
     void testShouldReturnTagWithSuchId() {
         //given
         Tag tag = new Tag(1L, "tag");
-        when(tagRepository.queryForOne(any(TagFindByIdSpecification.class))).thenReturn(Optional.of(tag));
+        when(tagRepository.findById(1L)).thenReturn(Optional.of(tag));
         //when
         Tag expectedTag = tagService.findById(1L);
         //then
@@ -74,10 +76,19 @@ class TagServiceImplTest {
     }
 
     @Test
-    void delete() {
+    void testThrowsNoSuchEntityException() {
+        //given
+        when(tagRepository.findById(anyLong())).thenReturn(Optional.empty());
+        when(translator.toLocale(any())).thenReturn("message");
+        //then
+        assertThrows(NoSuchEntityException.class, () -> tagService.findById(1L));
+    }
+
+    @Test
+    void testShouldDeleteTag() {
         //given
         Tag tag = new Tag(1L, "tag");
-        when(tagRepository.queryForOne(any(TagFindByIdSpecification.class))).thenReturn(Optional.of(tag));
+        when(tagRepository.findById(1L)).thenReturn(Optional.of(tag));
         //when
         tagService.delete(1L);
         //then
@@ -88,19 +99,28 @@ class TagServiceImplTest {
     void testShouldReturnTagWithSuchName() {
         //given
         Tag tag = new Tag(1L, "tag");
-        when(tagRepository.queryForOne(any(TagFindByNameSpecification.class))).thenReturn(Optional.of(tag));
+        when(tagRepository.findByName("tag")).thenReturn(Optional.of(tag));
         //when
         Tag actual = tagService.findByName("tag");
         //then
         assertEquals(tag, actual);
+    }
 
+    @Test
+    void testThrowsNoSuchEntityExceptionWithSuchName() {
+        //given
+        Tag tag = new Tag(1L, "name");
+        when(tagRepository.findByName(tag.getName())).thenReturn(Optional.empty());
+        when(translator.toLocale(any())).thenReturn("message");
+        //then
+        assertThrows(NoSuchEntityException.class, () -> tagService.findByName(tag.getName()));
     }
 
     @Test
     void testShouldReturnListOfTagsByCertificateId() {
         //given
-        List<Tag> tags = Arrays.asList(new Tag(1L, "tag"), new Tag());
-        when(tagRepository.queryForList(any(TagFindByCertificateIdSpecification.class))).thenReturn(tags);
+        List<Tag> tags = Arrays.asList(new Tag(1L, "tag"), new Tag(2L, "tag2"));
+        when(tagRepository.findByCertificateId(1L)).thenReturn(tags);
         //when
         List<Tag> actual = tagService.findByCertificateId(1L);
         //then
@@ -111,14 +131,68 @@ class TagServiceImplTest {
     @Test
     void testShouldReturnListOfTagsWithNames() {
         //given
-        List<Tag> tags = Arrays.asList(new Tag("name"), new Tag("name2"));
-        when(tagRepository.queryForList(any(TagFindByNamesSpecification.class))).thenReturn(tags);
+        List<Tag> tags = Arrays.asList(new Tag(1L, "name"), new Tag(2L, "name2"));
+        when(tagRepository.findByNames(List.of("name", "name2"))).thenReturn(tags);
         //when
         List<String> names = Arrays.asList("name", "name2");
         List<Tag> actual = tagService.findByNames(names);
         //then
         assertEquals(tags.size(), actual.size());
         assertEquals(tags, actual);
+    }
+
+    @Test
+    void testWidelyUsedTagThrowsNoSuchEntityException() {
+        //given
+        when(tagRepository.findMostPopularTag(, )).thenReturn(Collections.emptyList());
+        when(translator.toLocale(any())).thenReturn("message");
+        //then
+        assertThrows(NoSuchEntityException.class, () -> tagService.findWidelyUsed(, ));
+    }
+
+    @Test
+    void testShouldReturnWidelyUsedTag() {
+        //given
+        Tag tag = new Tag(1L, "popular");
+        when(tagRepository.findMostPopularTag(, )).thenReturn(List.of(tag));
+        //when
+        List<Tag> actual = tagService.findWidelyUsed(, );
+        //then
+        assertEquals(0, actual.size());
+    }
+
+    @Test
+    void testShouldReturnCountOfTags() {
+        when(tagRepository.count()).thenReturn(10L);
+        Long actual = tagService.count();
+        assertEquals(10, actual);
+    }
+
+    @Test
+    void testShouldReturnTagWithName() {
+        //given
+        Tag tag = new Tag(1L, "tag");
+        Tag addTag = new Tag("tag");
+        when(tagRepository.findByName(addTag.getName())).thenReturn(Optional.of(tag));
+        //when
+        Tag actual = tagService.findByNameOrCreate(addTag.getName());
+        //then
+        assertEquals(tag.getName(), actual.getName());
+        assertEquals(1L, actual.getId());
+        assertNotNull(actual.getId());
+    }
+
+    @Test
+    void testShouldCreateTagIfItDoesNotExist() {
+        //given
+        Tag tag = new Tag(1L, "name");
+        Tag addTag = new Tag("name");
+        when(tagRepository.findByName(addTag.getName())).thenReturn(Optional.empty());
+        when(tagRepository.add(addTag)).thenReturn(tag);
+        //when
+        Tag actual = tagService.findByNameOrCreate(addTag.getName());
+        //then
+        assertEquals(tag.getName(), actual.getName());
     }
 
 }
